...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cookRecipeFrag_txt_title"
        android:background="@color/material_dynamic_neutral90"
        android:radius="7dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cookRecipeFrag_recycler_ingredients"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/cookRecipeFrag_txt_instructions"
...
        android:layout_marginEnd="8dp"
        android:text="@string/recipe_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:background="@color/material_dynamic_neutral90"
        android:radius="7dp"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        style='?android:attr/buttonBarStyle'
...
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:text="@string/pin"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/cookRecipeFrag_btn_scale"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/scale"
            style="?android:attr/buttonBarButtonStyle" />

...
